[project]
name = "internet-roadtrip-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
]
